initial checkin to allow sending and receiving and displaying chat messages

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Library/XMPPFramework-linked"]
 	path = Library/XMPPFramework-linked
 	url = git://github.com/robbiehanson/XMPPFramework.git
+[submodule "Library/UIInputToolbar"]
+	path = Library/UIInputToolbar
+	url = git://github.com/brandonhamilton/inputtoolbar.git
